--- a/src/i18n/locales/en/translation.i18n.json
+++ b/src/i18n/locales/en/translation.i18n.json
@@ -9,6 +9,7 @@
     "global.serie": "Serie",
 
     "error.getting.data" : "Error getting data",
+    "error.signing.in" : "Error signing in",
     
     "account": "Account",
     "account.sign.in": "Sign In",
